# swagger.json
@@ -34,11 +34,11 @@
               "examples": {
                 "Users": {
                   "value": {
-                    "nome": "Wendel",
-                    "usuario": "Schatten",
+                    "name": "Wendel",
+                    "username": "Schatten",
                     "email": "wendelosantos@hotmail.com",
-                    "password": "123456",
-                    "image": "foto"
+                    "password": "wendel",
+                    "photo": "foto"
                   }
                 }
               }
@@ -67,17 +67,12 @@
       "get": {
         "security": [
           {
-             "bearerAuth": []
+            "bearerAuth": []
           }
-       ],
+        ],
         "summary": "Lista de todos os usuários",
         "description": "Rota responsável por listar todos os usuários",
         "tags": ["User"],
-        "security": [
-          {
-            "token": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -116,7 +111,7 @@
                 "User": {
                   "value": {
                     "email": "wendelosantos@hotmail.com",
-                    "password": "123456"
+                    "password": "wendel"
                   }
                 }
               }
@@ -179,9 +174,9 @@
       "get": {
         "security": [
           {
-             "bearerAuth": []
+            "bearerAuth": []
           }
-       ],
+        ],
         "summary": "Busca um personagem pelo ID",
         "description": "Rota responsável por buscar um personagem pelo ID",
         "tags": ["Characters"],
@@ -215,9 +210,9 @@
       "post": {
         "security": [
           {
-             "bearerAuth": []
+            "bearerAuth": []
           }
-       ],
+        ],
         "summary": "Cadastrar uma personagem",
         "description": "Rota responsável por cadastrar um personagem",
         "tags": ["Characters"],
@@ -231,7 +226,7 @@
                 "Rickandmorty": {
                   "value": {
                     "name": "Annie",
-                    "image": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
+                    "imageUrl": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
                   }
                 }
               }
@@ -260,9 +255,9 @@
       "put": {
         "security": [
           {
-             "bearerAuth": []
+            "bearerAuth": []
           }
-       ],
+        ],
         "summary": "Editar um personagem pelo ID",
         "description": "Rota responsável por editar um personagem pelo ID",
         "tags": ["Characters"],
@@ -284,7 +279,7 @@
                 "Paletas": {
                   "value": {
                     "name": "Annie Editado",
-                    "image": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
+                    "imageUrl": "https://rickandmortyapi.com/api/character/avatar/17.jpeg"
                   }
                 }
               }
@@ -313,9 +308,9 @@
       "delete": {
         "security": [
           {
-             "bearerAuth": []
+            "bearerAuth": []
           }
-       ],
+        ],
         "summary": "Apagar um personagem pelo ID",
         "description": "Rota responsável por apagar um personagem pelo ID",
         "tags": ["Characters"],
@@ -341,18 +336,13 @@
       "get": {
         "security": [
           {
-             "bearerAuth": []
+            "bearerAuth": []
           }
-       ],
+        ],
         "summary": "Busca um personagem pelo nome",
         "description": "Rota responsável por buscar um personagem pelo nome",
         "tags": ["Characters"],
-        "security": [
-          {
-            "token": []
-          }
-        ],
-        "parameters": [
+       "parameters": [
           {
             "in": "query",
             "name": "name",
@@ -397,7 +387,7 @@
           "name": {
             "type": "string"
           },
-          "image": {
+          "imageUrl": {
             "type": "string"
           }
         }
@@ -405,10 +395,10 @@
       "Users": {
         "type": "object",
         "properties": {
-          "nome": {
+          "name": {
             "type": "string"
           },
-          "usuario": {
+          "username": {
             "type": "string"
           },
           "email": {
@@ -417,7 +407,7 @@
           "password": {
             "type": "string"
           },
-          "image": {
+          "photo": {
             "type": "string"
           }
         }
